--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.18.1
   http: ^1.1.0
+  carousel_slider: ^4.2.1
+  smooth_page_indicator: ^1.1.0
+  flutter_svg: ^2.0.9
+  google_fonts: ^6.1.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
@@ -57,9 +62,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/logos/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -67,22 +72,25 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+     - family: Pretendard
+       fonts:
+         - asset: assets/fonts/Pretendard-Thin.otf
+           weight: 100
+         - asset: assets/fonts/Pretendard-ExtraLight.otf
+           weight: 200
+         - asset: assets/fonts/Pretendard-Light.otf
+           weight: 300
+         - asset: assets/fonts/Pretendard-Regular.otf
+           weight: 400
+         - asset: assets/fonts/Pretendard-Medium.otf
+           weight: 500
+         - asset: assets/fonts/Pretendard-SemiBold.otf
+           weight: 600
+         - asset: assets/fonts/Pretendard-Bold.otf
+           weight: 700
+         - asset: assets/fonts/Pretendard-ExtraBold.otf
+           weight: 800
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
